--- a/style.css
+++ b/style.css
@@ -41,3 +41,31 @@ h1 {
 .post span {
     color: #61afef;
 }
+
+ul {
+    list-style-type: none;
+    margin: 0 0 0 30px;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+  
+li {
+  float: left;
+}
+  
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+  
+li a:hover:not(.active) {
+  background-color: #111;
+}
+  
+.active {
+  background-color: #e56f00;
+}
